# templates

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  generator.sh  main.c
include/: _env.h  pch.h
src/: CMakeLists.txt  pch.c
